--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.theprogrammingturkey.hackohio2016">
+    package="com.theprogrammingturkey.hackohio2016">
 
     <application
         android:allowBackup="true"
@@ -10,11 +10,16 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Withdraw"
+            android:label="@string/title_activity_withdraw"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Account"></activity>
     </application>
 
 </manifest>
