--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile group: 'com.google.code.gson', name: 'gson', version: '2.4'
+    compile 'com.reimaginebanking.api:nessie-android-sdk:1.0.4'
 }
