--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.theprogrammingturkey.hackohio2016">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -21,8 +21,9 @@
             android:name=".Withdraw"
             android:label="@string/title_activity_withdraw"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Account" />
+        <activity android:name=".AccountActivity" />
         <activity android:name=".DepositActivity" />
+        <activity android:name=".HomeActivity"></activity>
     </application>
 
 </manifest>
