--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    testCompile 'junit:junit:4.12'
 
     compile group: 'com.google.code.gson', name: 'gson', version: '2.4'
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.google.android.gms:play-services:9.8.0'
+    testCompile 'junit:junit:4.12'
 }
