added button to home layout to go to in app maps

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         <activity android:name=".DepositActivity"/>
         <activity android:name=".HomeActivity"/>
         <activity android:name=".BankBranches"/>
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps"/>
          
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -50,10 +53,7 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
-        <activity
-            android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"/><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+
 
 
     </application>
